--- a/broker.properties
+++ b/broker.properties
@@ -2,6 +2,7 @@ brokerClusterName=DockerRocketMQCluster
 brokerName=broker-a
 brokerId=0
 brokerIP1=BROKER_IP
+brokerIP2=BROKER_IP
 deleteWhen=04
 fileReservedTime=48
 brokerRole=ASYNC_MASTER
