--- a/broker.properties
+++ b/broker.properties
@@ -15,3 +15,4 @@ storePathConsumeQueue=/rocketmq/data/store/consumequeue
 storePathIndex=/rocketmq/data/store/index
 storeCheckpoint=/rocketmq/data/store/checkpoint
 abortFile=/rocketmq/data/store/abort
+slaveReadEnable=true
