--- a/broker.properties
+++ b/broker.properties
@@ -3,6 +3,7 @@ brokerName=broker-a
 brokerId=0
 brokerIP1=BROKER_IP
 brokerIP2=BROKER_IP
+listenPort=10911
 deleteWhen=04
 fileReservedTime=48
 brokerRole=ASYNC_MASTER
@@ -16,3 +17,4 @@ storePathIndex=/rocketmq/data/store/index
 storeCheckpoint=/rocketmq/data/store/checkpoint
 abortFile=/rocketmq/data/store/abort
 slaveReadEnable=true
+transientStorePoolEnable=true
